--- a/package.json
+++ b/package.json
@@ -12,7 +12,9 @@
   "dependencies": {
     "axios": "^0.16.2",
     "es6-promise": "^4.1.0",
+    "front-matter": "^2.1.2",
     "marked": "^0.3.6",
+    "moment": "^2.18.1",
     "prismjs": "^1.6.0",
     "vue": "^2.3.3",
     "vue-router": "^2.3.1"
