--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "blog",
   "version": "1.0.0",
-  "description": "💡 Say something.",
+  "description": "💡 Say something. https://naraku777.github.io/blog/",
   "author": "Naraku777 <442815900@qq.com>",
   "private": true,
   "scripts": {
